# SlicerIconSwitch

./: CMakeLists.txt
IconSwitch/: CMakeLists.txt  qSlicerIconSwitchModule.cxx  qSlicerIconSwitchModule.h  qSlicerIconSwitchModuleWidget.cxx  qSlicerIconSwitchModuleWidget.h
IconSwitch/Logic/: vtkSlicerIconSwitchLogic.cxx  vtkSlicerIconSwitchLogic.h
IconSwitch/Resources/: qSlicerIconSwitchModule.qrc  qSlicerIconSwitchModuleDark.qrc  qSlicerIconSwitchModuleLight.qrc
IconSwitch/Resources/UI/: qSlicerIconSwitchFooBarWidget.ui  qSlicerIconSwitchModuleWidget.ui
IconSwitch/Widgets/: qSlicerIconSwitchFooBarWidget.cxx  qSlicerIconSwitchFooBarWidget.h
IconSwitchPython/: CMakeLists.txt  IconSwitchPython.py
IconSwitchPython/Resources/UI/: IconSwitchPython.ui
